--- a/frontend/src/locales/tr.po
+++ b/frontend/src/locales/tr.po
@@ -29,7 +29,7 @@ msgstr "Henüz gösterilecek bir şey yok"
 
 #: src/components/routes/admin/Attribution/index.tsx:148
 msgid "(empty)"
-msgstr "(boş)"
+msgstr ""
 
 #: src/components/common/OrganizerReportTable/index.tsx:314
 #: src/components/common/ReportTable/index.tsx:303
@@ -277,7 +277,7 @@ msgstr "KDV veya ÖTV gibi standart vergi"
 msgid "Abandoned"
 msgstr "Terk edildi"
 
-#: src/components/layouts/EventHomepage/index.tsx:389
+#: src/components/layouts/EventHomepage/index.tsx:375
 msgid "About"
 msgstr "Hakkında"
 
@@ -477,7 +477,7 @@ msgstr "Kademe ekle"
 
 #: src/components/common/AddEventToCalendarButton/index.tsx:14
 #: src/components/common/AddToCalendarCTA/index.tsx:24
-#: src/components/layouts/EventHomepage/index.tsx:322
+#: src/components/layouts/EventHomepage/index.tsx:320
 msgid "Add to Calendar"
 msgstr "Takvime Ekle"
 
@@ -982,17 +982,21 @@ msgstr "Belirli bir bilete sahip katılımcılar"
 msgid "Attendees:"
 msgstr "Katılımcılar:"
 
+#: src/components/layouts/Admin/index.tsx:18
+msgid "Attribution"
+msgstr ""
+
 #: src/components/routes/admin/Attribution/index.tsx:29
 msgid "Attribution Analytics"
-msgstr "Atıf Analitiği"
+msgstr ""
 
 #: src/components/routes/admin/Attribution/index.tsx:97
 msgid "Attribution Breakdown"
-msgstr "Atıf Dağılımı"
+msgstr ""
 
 #: src/components/routes/admin/Attribution/index.tsx:124
 msgid "Attribution Value"
-msgstr "Atıf Değeri"
+msgstr ""
 
 #: src/components/common/WidgetEditor/index.tsx:236
 msgid "Auto Resize"
@@ -1182,7 +1186,7 @@ msgstr "Kamera Tarayıcı"
 
 #: src/components/routes/admin/Attribution/index.tsx:107
 msgid "Campaign"
-msgstr "Kampanya"
+msgstr ""
 
 #: src/components/common/AttendeeTable/index.tsx:370
 #: src/components/common/CheckIn/CheckInOptionsModal.tsx:59
@@ -1788,7 +1792,7 @@ msgstr "Stripe'a Bağlandı"
 msgid "Connection Details"
 msgstr "Bağlantı Detayları"
 
-#: src/components/layouts/EventHomepage/index.tsx:583
+#: src/components/layouts/EventHomepage/index.tsx:569
 #: src/components/layouts/OrganizerHomepage/index.tsx:245
 msgid "Contact"
 msgstr "İletişim"
@@ -3550,7 +3554,7 @@ msgstr "Kod oluştur"
 msgid "German"
 msgstr "Almanca"
 
-#: src/components/layouts/EventHomepage/index.tsx:420
+#: src/components/layouts/EventHomepage/index.tsx:406
 msgid "Get Directions"
 msgstr "Yol Tarifi Al"
 
@@ -3562,7 +3566,7 @@ msgstr "Stripe Connect üzerinden anında ödeme alın"
 msgid "Get started"
 msgstr "Başlayın"
 
-#: src/components/layouts/EventHomepage/index.tsx:619
+#: src/components/layouts/EventHomepage/index.tsx:605
 msgid "Get Tickets"
 msgstr "Bilet Al"
 
@@ -4069,7 +4073,7 @@ msgstr "John"
 msgid "Johnson"
 msgstr "Johnson"
 
-#: src/components/layouts/EventHomepage/index.tsx:348
+#: src/components/layouts/EventHomepage/index.tsx:334
 msgid "Join from anywhere"
 msgstr "Her yerden katılın"
 
@@ -4236,7 +4240,7 @@ msgid "Loading..."
 msgstr "Yükleniyor..."
 
 #: src/components/common/AttendeeTicket/index.tsx:91
-#: src/components/layouts/EventHomepage/index.tsx:402
+#: src/components/layouts/EventHomepage/index.tsx:388
 #: src/components/routes/event/Settings/index.tsx:42
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:84
 #: src/components/routes/my-tickets/index.tsx:73
@@ -4367,7 +4371,7 @@ msgstr "Sipariş Başına Maksimum"
 
 #: src/components/routes/admin/Attribution/index.tsx:108
 msgid "Medium"
-msgstr "Ortam"
+msgstr ""
 
 #: src/components/common/AttendeeTable/index.tsx:188
 #: src/components/common/ContactOrganizerModal/index.tsx:88
@@ -4581,7 +4585,7 @@ msgstr "Gösterilecek Katılımcı yok"
 
 #: src/components/routes/admin/Attribution/index.tsx:139
 msgid "No attribution data found"
-msgstr "Atıf verisi bulunamadı"
+msgstr ""
 
 #: src/components/common/CapacityAssignmentList/index.tsx:42
 msgid "No Capacity Assignments"
@@ -4897,7 +4901,8 @@ msgstr "Devam Eden"
 msgid "Online"
 msgstr "Çevrimiçi"
 
-#: src/components/layouts/EventHomepage/index.tsx:346
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:71
+#: src/components/layouts/EventHomepage/index.tsx:332
 #: src/components/layouts/OrganizerHomepage/EventCard/index.tsx:167
 msgid "Online Event"
 msgstr "Çevrimiçi Etkinlik"
@@ -5161,7 +5166,7 @@ msgstr "Siparişler:"
 
 #: src/components/routes/admin/Attribution/index.tsx:62
 msgid "Organic Accounts"
-msgstr "Organik Hesaplar"
+msgstr ""
 
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:44
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:45
@@ -5185,7 +5190,7 @@ msgstr "Organizasyon Adı"
 
 #: src/components/common/AdminEventsTable/index.tsx:85
 #: src/components/common/AttendeeTicket/index.tsx:82
-#: src/components/layouts/EventHomepage/index.tsx:495
+#: src/components/layouts/EventHomepage/index.tsx:481
 #: src/components/modals/EditUserModal/index.tsx:55
 #: src/components/modals/InviteUserModal/index.tsx:47
 #: src/components/routes/events/Dashboard/index.tsx:193
@@ -5295,7 +5300,7 @@ msgstr "ödendi"
 
 #: src/components/routes/admin/Attribution/index.tsx:51
 msgid "Paid Accounts"
-msgstr "Ücretli Hesaplar"
+msgstr ""
 
 #: src/components/forms/ProductForm/index.tsx:154
 msgid "Paid Product"
@@ -5758,7 +5763,7 @@ msgstr "Biletleri Yazdır"
 msgid "Print to PDF"
 msgstr "PDF'ye Yazdır"
 
-#: src/components/layouts/EventHomepage/index.tsx:599
+#: src/components/layouts/EventHomepage/index.tsx:585
 #: src/components/layouts/OrganizerHomepage/index.tsx:328
 msgid "Privacy Policy"
 msgstr "Gizlilik Politikası"
@@ -6013,7 +6018,7 @@ msgstr "Stripe'a yönlendiriliyor..."
 
 #: src/components/routes/admin/Attribution/index.tsx:73
 msgid "Referral Accounts"
-msgstr "Yönlendirme Hesapları"
+msgstr ""
 
 #: src/components/common/EmailTemplateEditor/EmailTemplateEditor.tsx:175
 msgid "Refresh Preview"
@@ -6702,7 +6707,7 @@ msgid "Setup & Design"
 msgstr "Kurulum ve Tasarım"
 
 #: src/components/common/ShareIcon/index.tsx:30
-#: src/components/layouts/EventHomepage/index.tsx:295
+#: src/components/layouts/EventHomepage/index.tsx:293
 #: src/components/layouts/OrganizerLayout/index.tsx:228
 #: src/components/modals/ShareModal/index.tsx:37
 #: src/components/modals/ShareModal/index.tsx:165
@@ -6819,7 +6824,7 @@ msgid "Sold out"
 msgstr "Tükendi"
 
 #: src/components/common/ProductsTable/SortableProduct/index.tsx:81
-#: src/components/layouts/EventHomepage/index.tsx:145
+#: src/components/layouts/EventHomepage/index.tsx:143
 msgid "Sold Out"
 msgstr "Tükendi"
 
@@ -6866,7 +6871,7 @@ msgstr "Üzgünüz, bu promosyon kodu tanınmıyor"
 
 #: src/components/routes/admin/Attribution/index.tsx:106
 msgid "Source"
-msgstr "Kaynak"
+msgstr ""
 
 #: src/components/common/LanguageSwitcher/index.tsx:20
 msgid "Spanish"
@@ -6917,7 +6922,7 @@ msgstr "İstatistikler"
 
 #: src/components/routes/admin/Attribution/index.tsx:35
 msgid "Statistics are based on account creation date"
-msgstr "İstatistikler hesap oluşturma tarihine göre hesaplanır"
+msgstr ""
 
 #: src/components/common/AdminEventsTable/index.tsx:107
 #: src/components/common/AdminOrdersTable/index.tsx:82
@@ -6955,7 +6960,7 @@ msgstr "Stripe Connect"
 
 #: src/components/routes/admin/Attribution/index.tsx:128
 msgid "Stripe Connected"
-msgstr "Stripe Bağlı"
+msgstr ""
 
 #: src/components/routes/product-widget/Payment/PaymentMethods/Stripe/index.tsx:50
 msgid "Stripe payments are not enabled for this event."
@@ -7267,7 +7272,7 @@ msgstr "Şablon başarıyla silindi"
 msgid "Template saved successfully"
 msgstr "Şablon başarıyla kaydedildi"
 
-#: src/components/layouts/EventHomepage/index.tsx:605
+#: src/components/layouts/EventHomepage/index.tsx:591
 #: src/components/layouts/OrganizerHomepage/index.tsx:335
 msgid "Terms of Service"
 msgstr "Hizmet Koşulları"
@@ -7477,10 +7482,6 @@ msgstr "Bu kod satışları izlemek için kullanılacaktır. Yalnızca harfler, 
 #: src/components/common/ThemeColorControls/index.tsx:104
 msgid "This color combination may be hard to read for some users"
 msgstr "Bu renk kombinasyonu bazı kullanıcılar için okunması zor olabilir"
-
-#: src/components/layouts/EventHomepage/index.tsx:334
-msgid "This event has ended"
-msgstr "Bu etkinlik sona erdi"
 
 #: src/components/common/StatusToggle/index.tsx:82
 msgid "This event is not published yet"
@@ -7707,7 +7708,7 @@ msgstr "Biletler"
 msgid "Tickets & Products"
 msgstr "Biletler ve Ürünler"
 
-#: src/components/layouts/EventHomepage/index.tsx:152
+#: src/components/layouts/EventHomepage/index.tsx:150
 msgid "Tickets Available"
 msgstr "Mevcut Biletler"
 
@@ -7846,7 +7847,7 @@ msgstr "Toplam Kullanıcılar"
 
 #: src/components/routes/admin/Attribution/index.tsx:32
 msgid "Track account growth and performance by attribution source"
-msgstr "Atıf kaynağına göre hesap büyümesini ve performansını takip edin"
+msgstr ""
 
 #: src/components/layouts/AuthLayout/index.tsx:41
 msgid "Track sales, revenue, and attendance with detailed reports"
@@ -7935,7 +7936,7 @@ msgstr "Soru güncellenemedi. Lütfen bilgilerinizi kontrol edin"
 
 #: src/components/routes/admin/Attribution/index.tsx:84
 msgid "Unattributed Accounts"
-msgstr "Atıfsız Hesaplar"
+msgstr ""
 
 #: src/components/routes/event/Reports/PromoCodesReport/index.tsx:30
 msgid "Unique Customers"
@@ -8126,10 +8127,6 @@ msgstr "Kullanıcılar e-postalarını <0>Profil Ayarları</0>'nda değiştirebi
 msgid "UTC"
 msgstr "UTC"
 
-#: src/components/layouts/Admin/index.tsx:18
-msgid "UTM Analytics"
-msgstr "UTM Analitiği"
-
 #: src/components/routes/admin/Accounts/AccountDetail/index.tsx:206
 msgid "Valid"
 msgstr "Geçerli"
@@ -8235,7 +8232,7 @@ msgstr "Doğrulama kodu"
 
 #: src/components/routes/admin/Attribution/index.tsx:129
 msgid "Verified"
-msgstr "Doğrulandı"
+msgstr ""
 
 #: src/components/routes/welcome/index.tsx:187
 msgid "Verify Email"
@@ -8291,11 +8288,16 @@ msgstr "Tam mesajı görüntüle"
 msgid "View logs"
 msgstr "Günlükleri görüntüle"
 
-#: src/components/layouts/EventHomepage/index.tsx:461
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:95
+msgid "View map"
+msgstr "Haritayı görüntüle"
+
+#: src/components/layouts/EventHomepage/index.tsx:447
 msgid "View Map"
 msgstr "Haritayı Görüntüle"
 
-#: src/components/layouts/EventHomepage/index.tsx:374
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:95
+#: src/components/layouts/EventHomepage/index.tsx:360
 msgid "View on Google Maps"
 msgstr "Google Haritalar'da görüntüle"
 
@@ -8991,3 +8993,57 @@ msgstr "Posta Kodu"
 #: src/components/routes/product-widget/CollectInformation/index.tsx:523
 msgid "ZIP or Postal Code"
 msgstr "Posta Kodu"
+
+msgid "(empty)"
+msgstr "(boş)"
+
+msgid "Attribution"
+msgstr "Atıf"
+
+msgid "Attribution Analytics"
+msgstr "Atıf Analitiği"
+
+msgid "Attribution Breakdown"
+msgstr "Atıf Dağılımı"
+
+msgid "Attribution Value"
+msgstr "Atıf Değeri"
+
+msgid "Campaign"
+msgstr "Kampanya"
+
+msgid "Medium"
+msgstr "Ortam"
+
+msgid "No attribution data found"
+msgstr "Atıf verisi bulunamadı"
+
+msgid "Organic Accounts"
+msgstr "Organik Hesaplar"
+
+msgid "Paid Accounts"
+msgstr "Ücretli Hesaplar"
+
+msgid "Referral Accounts"
+msgstr "Yönlendirme Hesapları"
+
+msgid "Source"
+msgstr "Kaynak"
+
+msgid "Statistics are based on account creation date"
+msgstr "İstatistikler hesap oluşturma tarihine göre hesaplanır"
+
+msgid "Stripe Connected"
+msgstr "Stripe Bağlı"
+
+msgid "Track account growth and performance by attribution source"
+msgstr "Atıf kaynağına göre hesap büyümesini ve performansını takip edin"
+
+msgid "Unattributed Accounts"
+msgstr "Atıfsız Hesaplar"
+
+msgid "Verified"
+msgstr "Doğrulandı"
+
+msgid "UTM Analytics"
+msgstr "UTM Analitiği"
