--- a/frontend/src/locales/de.po
+++ b/frontend/src/locales/de.po
@@ -29,7 +29,7 @@ msgstr "„Hier gibt es noch nichts zu sehen“"
 
 #: src/components/routes/admin/Attribution/index.tsx:148
 msgid "(empty)"
-msgstr "(leer)"
+msgstr ""
 
 #: src/components/common/OrganizerReportTable/index.tsx:314
 #: src/components/common/ReportTable/index.tsx:303
@@ -277,7 +277,7 @@ msgstr "Eine Standardsteuer wie Mehrwertsteuer oder GST"
 msgid "Abandoned"
 msgstr "Abgebrochen"
 
-#: src/components/layouts/EventHomepage/index.tsx:389
+#: src/components/layouts/EventHomepage/index.tsx:375
 msgid "About"
 msgstr "Über"
 
@@ -477,7 +477,7 @@ msgstr "Ebene hinzufügen"
 
 #: src/components/common/AddEventToCalendarButton/index.tsx:14
 #: src/components/common/AddToCalendarCTA/index.tsx:24
-#: src/components/layouts/EventHomepage/index.tsx:322
+#: src/components/layouts/EventHomepage/index.tsx:320
 msgid "Add to Calendar"
 msgstr "Zum Kalender hinzufügen"
 
@@ -982,17 +982,21 @@ msgstr "Teilnehmer mit einem bestimmten Ticket"
 msgid "Attendees:"
 msgstr "Teilnehmer:"
 
+#: src/components/layouts/Admin/index.tsx:18
+msgid "Attribution"
+msgstr ""
+
 #: src/components/routes/admin/Attribution/index.tsx:29
 msgid "Attribution Analytics"
-msgstr "Attributionsanalyse"
+msgstr ""
 
 #: src/components/routes/admin/Attribution/index.tsx:97
 msgid "Attribution Breakdown"
-msgstr "Attributionsaufschlüsselung"
+msgstr ""
 
 #: src/components/routes/admin/Attribution/index.tsx:124
 msgid "Attribution Value"
-msgstr "Attributionswert"
+msgstr ""
 
 #: src/components/common/WidgetEditor/index.tsx:236
 msgid "Auto Resize"
@@ -1182,7 +1186,7 @@ msgstr "Kamera-Scanner"
 
 #: src/components/routes/admin/Attribution/index.tsx:107
 msgid "Campaign"
-msgstr "Kampagne"
+msgstr ""
 
 #: src/components/common/AttendeeTable/index.tsx:370
 #: src/components/common/CheckIn/CheckInOptionsModal.tsx:59
@@ -1788,7 +1792,7 @@ msgstr "Mit Stripe verbunden"
 msgid "Connection Details"
 msgstr "Verbindungsdetails"
 
-#: src/components/layouts/EventHomepage/index.tsx:583
+#: src/components/layouts/EventHomepage/index.tsx:569
 #: src/components/layouts/OrganizerHomepage/index.tsx:245
 msgid "Contact"
 msgstr "Kontakt"
@@ -3550,7 +3554,7 @@ msgstr "Code generieren"
 msgid "German"
 msgstr "Deutsch"
 
-#: src/components/layouts/EventHomepage/index.tsx:420
+#: src/components/layouts/EventHomepage/index.tsx:406
 msgid "Get Directions"
 msgstr "Wegbeschreibung"
 
@@ -3562,7 +3566,7 @@ msgstr "Sofortige Auszahlung über Stripe Connect"
 msgid "Get started"
 msgstr "Erste Schritte"
 
-#: src/components/layouts/EventHomepage/index.tsx:619
+#: src/components/layouts/EventHomepage/index.tsx:605
 msgid "Get Tickets"
 msgstr "Tickets erhalten"
 
@@ -4069,7 +4073,7 @@ msgstr "John"
 msgid "Johnson"
 msgstr "Johnson"
 
-#: src/components/layouts/EventHomepage/index.tsx:348
+#: src/components/layouts/EventHomepage/index.tsx:334
 msgid "Join from anywhere"
 msgstr "Von überall teilnehmen"
 
@@ -4236,7 +4240,7 @@ msgid "Loading..."
 msgstr "Wird geladen..."
 
 #: src/components/common/AttendeeTicket/index.tsx:91
-#: src/components/layouts/EventHomepage/index.tsx:402
+#: src/components/layouts/EventHomepage/index.tsx:388
 #: src/components/routes/event/Settings/index.tsx:42
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:84
 #: src/components/routes/my-tickets/index.tsx:73
@@ -4367,7 +4371,7 @@ msgstr "Maximal pro Bestellung"
 
 #: src/components/routes/admin/Attribution/index.tsx:108
 msgid "Medium"
-msgstr "Medium"
+msgstr ""
 
 #: src/components/common/AttendeeTable/index.tsx:188
 #: src/components/common/ContactOrganizerModal/index.tsx:88
@@ -4581,7 +4585,7 @@ msgstr "Keine Teilnehmer zum Anzeigen"
 
 #: src/components/routes/admin/Attribution/index.tsx:139
 msgid "No attribution data found"
-msgstr "Keine Attributionsdaten gefunden"
+msgstr ""
 
 #: src/components/common/CapacityAssignmentList/index.tsx:42
 msgid "No Capacity Assignments"
@@ -4897,7 +4901,8 @@ msgstr "Laufend"
 msgid "Online"
 msgstr "Online"
 
-#: src/components/layouts/EventHomepage/index.tsx:346
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:71
+#: src/components/layouts/EventHomepage/index.tsx:332
 #: src/components/layouts/OrganizerHomepage/EventCard/index.tsx:167
 msgid "Online Event"
 msgstr "Online-Veranstaltung"
@@ -5161,7 +5166,7 @@ msgstr "Bestellungen:"
 
 #: src/components/routes/admin/Attribution/index.tsx:62
 msgid "Organic Accounts"
-msgstr "Organische Konten"
+msgstr ""
 
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:44
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:45
@@ -5185,7 +5190,7 @@ msgstr "Organisationsname"
 
 #: src/components/common/AdminEventsTable/index.tsx:85
 #: src/components/common/AttendeeTicket/index.tsx:82
-#: src/components/layouts/EventHomepage/index.tsx:495
+#: src/components/layouts/EventHomepage/index.tsx:481
 #: src/components/modals/EditUserModal/index.tsx:55
 #: src/components/modals/InviteUserModal/index.tsx:47
 #: src/components/routes/events/Dashboard/index.tsx:193
@@ -5295,7 +5300,7 @@ msgstr "bezahlt"
 
 #: src/components/routes/admin/Attribution/index.tsx:51
 msgid "Paid Accounts"
-msgstr "Bezahlte Konten"
+msgstr ""
 
 #: src/components/forms/ProductForm/index.tsx:154
 msgid "Paid Product"
@@ -5758,7 +5763,7 @@ msgstr "Tickets drucken"
 msgid "Print to PDF"
 msgstr "Als PDF drucken"
 
-#: src/components/layouts/EventHomepage/index.tsx:599
+#: src/components/layouts/EventHomepage/index.tsx:585
 #: src/components/layouts/OrganizerHomepage/index.tsx:328
 msgid "Privacy Policy"
 msgstr "Datenschutzerklärung"
@@ -6011,7 +6016,7 @@ msgstr "Weiterleitung zu Stripe..."
 
 #: src/components/routes/admin/Attribution/index.tsx:73
 msgid "Referral Accounts"
-msgstr "Empfehlungskonten"
+msgstr ""
 
 #: src/components/common/EmailTemplateEditor/EmailTemplateEditor.tsx:175
 msgid "Refresh Preview"
@@ -6700,7 +6705,7 @@ msgid "Setup & Design"
 msgstr "Einrichtung & Design"
 
 #: src/components/common/ShareIcon/index.tsx:30
-#: src/components/layouts/EventHomepage/index.tsx:295
+#: src/components/layouts/EventHomepage/index.tsx:293
 #: src/components/layouts/OrganizerLayout/index.tsx:228
 #: src/components/modals/ShareModal/index.tsx:37
 #: src/components/modals/ShareModal/index.tsx:165
@@ -6817,7 +6822,7 @@ msgid "Sold out"
 msgstr "Ausverkauft"
 
 #: src/components/common/ProductsTable/SortableProduct/index.tsx:81
-#: src/components/layouts/EventHomepage/index.tsx:145
+#: src/components/layouts/EventHomepage/index.tsx:143
 msgid "Sold Out"
 msgstr "Ausverkauft"
 
@@ -6864,7 +6869,7 @@ msgstr "Dieser Aktionscode wird leider nicht erkannt"
 
 #: src/components/routes/admin/Attribution/index.tsx:106
 msgid "Source"
-msgstr "Quelle"
+msgstr ""
 
 #: src/components/common/LanguageSwitcher/index.tsx:20
 msgid "Spanish"
@@ -6915,7 +6920,7 @@ msgstr "Statistiken"
 
 #: src/components/routes/admin/Attribution/index.tsx:35
 msgid "Statistics are based on account creation date"
-msgstr "Statistiken basieren auf dem Erstellungsdatum des Kontos"
+msgstr ""
 
 #: src/components/common/AdminEventsTable/index.tsx:107
 #: src/components/common/AdminOrdersTable/index.tsx:82
@@ -6953,7 +6958,7 @@ msgstr "Stripe Connect"
 
 #: src/components/routes/admin/Attribution/index.tsx:128
 msgid "Stripe Connected"
-msgstr "Stripe verbunden"
+msgstr ""
 
 #: src/components/routes/product-widget/Payment/PaymentMethods/Stripe/index.tsx:50
 msgid "Stripe payments are not enabled for this event."
@@ -7265,7 +7270,7 @@ msgstr "Vorlage erfolgreich gelöscht"
 msgid "Template saved successfully"
 msgstr "Vorlage erfolgreich gespeichert"
 
-#: src/components/layouts/EventHomepage/index.tsx:605
+#: src/components/layouts/EventHomepage/index.tsx:591
 #: src/components/layouts/OrganizerHomepage/index.tsx:335
 msgid "Terms of Service"
 msgstr "Nutzungsbedingungen"
@@ -7475,10 +7480,6 @@ msgstr "Dieser Code wird zur Verfolgung von Verkäufen verwendet. Nur Buchstaben
 #: src/components/common/ThemeColorControls/index.tsx:104
 msgid "This color combination may be hard to read for some users"
 msgstr "Diese Farbkombination könnte für einige Benutzer schwer lesbar sein"
-
-#: src/components/layouts/EventHomepage/index.tsx:334
-msgid "This event has ended"
-msgstr "Diese Veranstaltung ist beendet"
 
 #: src/components/common/StatusToggle/index.tsx:82
 msgid "This event is not published yet"
@@ -7705,7 +7706,7 @@ msgstr "Tickets"
 msgid "Tickets & Products"
 msgstr "Tickets & Produkte"
 
-#: src/components/layouts/EventHomepage/index.tsx:152
+#: src/components/layouts/EventHomepage/index.tsx:150
 msgid "Tickets Available"
 msgstr "Tickets verfügbar"
 
@@ -7844,7 +7845,7 @@ msgstr "Gesamtbenutzer"
 
 #: src/components/routes/admin/Attribution/index.tsx:32
 msgid "Track account growth and performance by attribution source"
-msgstr "Verfolgen Sie das Kontowachstum und die Leistung nach Attributionsquelle"
+msgstr ""
 
 #: src/components/layouts/AuthLayout/index.tsx:41
 msgid "Track sales, revenue, and attendance with detailed reports"
@@ -7933,7 +7934,7 @@ msgstr "Frage kann nicht aktualisiert werden. Bitte überprüfen Sie Ihre Angabe
 
 #: src/components/routes/admin/Attribution/index.tsx:84
 msgid "Unattributed Accounts"
-msgstr "Nicht zugeordnete Konten"
+msgstr ""
 
 #: src/components/routes/event/Reports/PromoCodesReport/index.tsx:30
 msgid "Unique Customers"
@@ -8124,10 +8125,6 @@ msgstr "Benutzer können ihre E-Mail in den <0>Profileinstellungen</0> ändern."
 msgid "UTC"
 msgstr "koordinierte Weltzeit"
 
-#: src/components/layouts/Admin/index.tsx:18
-msgid "UTM Analytics"
-msgstr "UTM-Analyse"
-
 #: src/components/routes/admin/Accounts/AccountDetail/index.tsx:206
 msgid "Valid"
 msgstr "Gültig"
@@ -8233,7 +8230,7 @@ msgstr "Bestätigungscode"
 
 #: src/components/routes/admin/Attribution/index.tsx:129
 msgid "Verified"
-msgstr "Verifiziert"
+msgstr ""
 
 #: src/components/routes/welcome/index.tsx:187
 msgid "Verify Email"
@@ -8289,11 +8286,16 @@ msgstr "Vollständige Nachricht anzeigen"
 msgid "View logs"
 msgstr "Protokolle anzeigen"
 
-#: src/components/layouts/EventHomepage/index.tsx:461
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:95
+msgid "View map"
+msgstr "Ansichts Karte"
+
+#: src/components/layouts/EventHomepage/index.tsx:447
 msgid "View Map"
 msgstr "Karte ansehen"
 
-#: src/components/layouts/EventHomepage/index.tsx:374
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:95
+#: src/components/layouts/EventHomepage/index.tsx:360
 msgid "View on Google Maps"
 msgstr "Auf Google Maps anzeigen"
 
@@ -8989,3 +8991,57 @@ msgstr "Postleitzahl"
 #: src/components/routes/product-widget/CollectInformation/index.tsx:523
 msgid "ZIP or Postal Code"
 msgstr "Postleitzahl"
+
+msgid "(empty)"
+msgstr "(leer)"
+
+msgid "Attribution"
+msgstr "Attribution"
+
+msgid "Attribution Analytics"
+msgstr "Attributionsanalyse"
+
+msgid "Attribution Breakdown"
+msgstr "Attributionsaufschlüsselung"
+
+msgid "Attribution Value"
+msgstr "Attributionswert"
+
+msgid "Campaign"
+msgstr "Kampagne"
+
+msgid "Medium"
+msgstr "Medium"
+
+msgid "No attribution data found"
+msgstr "Keine Attributionsdaten gefunden"
+
+msgid "Organic Accounts"
+msgstr "Organische Konten"
+
+msgid "Paid Accounts"
+msgstr "Bezahlte Konten"
+
+msgid "Referral Accounts"
+msgstr "Empfehlungskonten"
+
+msgid "Source"
+msgstr "Quelle"
+
+msgid "Statistics are based on account creation date"
+msgstr "Statistiken basieren auf dem Erstellungsdatum des Kontos"
+
+msgid "Stripe Connected"
+msgstr "Stripe verbunden"
+
+msgid "Track account growth and performance by attribution source"
+msgstr "Verfolgen Sie das Kontowachstum und die Leistung nach Attributionsquelle"
+
+msgid "Unattributed Accounts"
+msgstr "Nicht zugeordnete Konten"
+
+msgid "Verified"
+msgstr "Verifiziert"
+
+msgid "UTM Analytics"
+msgstr "UTM-Analyse"
