--- a/frontend/src/locales/fr.po
+++ b/frontend/src/locales/fr.po
@@ -29,7 +29,7 @@ msgstr "\"Il n'y a rien à montrer pour l'instant\""
 
 #: src/components/routes/admin/Attribution/index.tsx:148
 msgid "(empty)"
-msgstr "(vide)"
+msgstr ""
 
 #: src/components/common/OrganizerReportTable/index.tsx:314
 #: src/components/common/ReportTable/index.tsx:303
@@ -277,7 +277,7 @@ msgstr "Une taxe standard, comme la TVA ou la TPS"
 msgid "Abandoned"
 msgstr "Abandonné"
 
-#: src/components/layouts/EventHomepage/index.tsx:389
+#: src/components/layouts/EventHomepage/index.tsx:375
 msgid "About"
 msgstr "À propos"
 
@@ -477,7 +477,7 @@ msgstr "Ajouter un niveau"
 
 #: src/components/common/AddEventToCalendarButton/index.tsx:14
 #: src/components/common/AddToCalendarCTA/index.tsx:24
-#: src/components/layouts/EventHomepage/index.tsx:322
+#: src/components/layouts/EventHomepage/index.tsx:320
 msgid "Add to Calendar"
 msgstr "Ajouter au calendrier"
 
@@ -982,17 +982,21 @@ msgstr "Participants avec un ticket spécifique"
 msgid "Attendees:"
 msgstr "Participants:"
 
+#: src/components/layouts/Admin/index.tsx:18
+msgid "Attribution"
+msgstr ""
+
 #: src/components/routes/admin/Attribution/index.tsx:29
 msgid "Attribution Analytics"
-msgstr "Analyse d'attribution"
+msgstr ""
 
 #: src/components/routes/admin/Attribution/index.tsx:97
 msgid "Attribution Breakdown"
-msgstr "Répartition de l'attribution"
+msgstr ""
 
 #: src/components/routes/admin/Attribution/index.tsx:124
 msgid "Attribution Value"
-msgstr "Valeur d'attribution"
+msgstr ""
 
 #: src/components/common/WidgetEditor/index.tsx:236
 msgid "Auto Resize"
@@ -1182,7 +1186,7 @@ msgstr "Scanner caméra"
 
 #: src/components/routes/admin/Attribution/index.tsx:107
 msgid "Campaign"
-msgstr "Campagne"
+msgstr ""
 
 #: src/components/common/AttendeeTable/index.tsx:370
 #: src/components/common/CheckIn/CheckInOptionsModal.tsx:59
@@ -1788,7 +1792,7 @@ msgstr "Connecté à Stripe"
 msgid "Connection Details"
 msgstr "Détails de connexion"
 
-#: src/components/layouts/EventHomepage/index.tsx:583
+#: src/components/layouts/EventHomepage/index.tsx:569
 #: src/components/layouts/OrganizerHomepage/index.tsx:245
 msgid "Contact"
 msgstr "Contact"
@@ -3551,7 +3555,7 @@ msgstr "Générer un code"
 msgid "German"
 msgstr "Allemand"
 
-#: src/components/layouts/EventHomepage/index.tsx:420
+#: src/components/layouts/EventHomepage/index.tsx:406
 msgid "Get Directions"
 msgstr "Itinéraire"
 
@@ -3563,7 +3567,7 @@ msgstr "Recevez vos paiements immédiatement via Stripe Connect"
 msgid "Get started"
 msgstr "Commencer"
 
-#: src/components/layouts/EventHomepage/index.tsx:619
+#: src/components/layouts/EventHomepage/index.tsx:605
 msgid "Get Tickets"
 msgstr "Obtenir des billets"
 
@@ -4070,7 +4074,7 @@ msgstr "John"
 msgid "Johnson"
 msgstr "Johnson"
 
-#: src/components/layouts/EventHomepage/index.tsx:348
+#: src/components/layouts/EventHomepage/index.tsx:334
 msgid "Join from anywhere"
 msgstr "Rejoignez de n'importe où"
 
@@ -4237,7 +4241,7 @@ msgid "Loading..."
 msgstr "Chargement..."
 
 #: src/components/common/AttendeeTicket/index.tsx:91
-#: src/components/layouts/EventHomepage/index.tsx:402
+#: src/components/layouts/EventHomepage/index.tsx:388
 #: src/components/routes/event/Settings/index.tsx:42
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:84
 #: src/components/routes/my-tickets/index.tsx:73
@@ -4368,7 +4372,7 @@ msgstr "Maximum par commande"
 
 #: src/components/routes/admin/Attribution/index.tsx:108
 msgid "Medium"
-msgstr "Support"
+msgstr ""
 
 #: src/components/common/AttendeeTable/index.tsx:188
 #: src/components/common/ContactOrganizerModal/index.tsx:88
@@ -4582,7 +4586,7 @@ msgstr "Aucun participant à afficher"
 
 #: src/components/routes/admin/Attribution/index.tsx:139
 msgid "No attribution data found"
-msgstr "Aucune donnée d'attribution trouvée"
+msgstr ""
 
 #: src/components/common/CapacityAssignmentList/index.tsx:42
 msgid "No Capacity Assignments"
@@ -4898,7 +4902,8 @@ msgstr "En cours"
 msgid "Online"
 msgstr "En ligne"
 
-#: src/components/layouts/EventHomepage/index.tsx:346
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:71
+#: src/components/layouts/EventHomepage/index.tsx:332
 #: src/components/layouts/OrganizerHomepage/EventCard/index.tsx:167
 msgid "Online Event"
 msgstr "Événement en ligne"
@@ -5162,7 +5167,7 @@ msgstr "Commandes:"
 
 #: src/components/routes/admin/Attribution/index.tsx:62
 msgid "Organic Accounts"
-msgstr "Comptes organiques"
+msgstr ""
 
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:44
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:45
@@ -5186,7 +5191,7 @@ msgstr "Nom de l'organisation"
 
 #: src/components/common/AdminEventsTable/index.tsx:85
 #: src/components/common/AttendeeTicket/index.tsx:82
-#: src/components/layouts/EventHomepage/index.tsx:495
+#: src/components/layouts/EventHomepage/index.tsx:481
 #: src/components/modals/EditUserModal/index.tsx:55
 #: src/components/modals/InviteUserModal/index.tsx:47
 #: src/components/routes/events/Dashboard/index.tsx:193
@@ -5296,7 +5301,7 @@ msgstr "payé"
 
 #: src/components/routes/admin/Attribution/index.tsx:51
 msgid "Paid Accounts"
-msgstr "Comptes payants"
+msgstr ""
 
 #: src/components/forms/ProductForm/index.tsx:154
 msgid "Paid Product"
@@ -5759,7 +5764,7 @@ msgstr "Imprimer les billets"
 msgid "Print to PDF"
 msgstr "Imprimer en PDF"
 
-#: src/components/layouts/EventHomepage/index.tsx:599
+#: src/components/layouts/EventHomepage/index.tsx:585
 #: src/components/layouts/OrganizerHomepage/index.tsx:328
 msgid "Privacy Policy"
 msgstr "Politique de confidentialité"
@@ -6012,7 +6017,7 @@ msgstr "Redirection vers Stripe..."
 
 #: src/components/routes/admin/Attribution/index.tsx:73
 msgid "Referral Accounts"
-msgstr "Comptes de parrainage"
+msgstr ""
 
 #: src/components/common/EmailTemplateEditor/EmailTemplateEditor.tsx:175
 msgid "Refresh Preview"
@@ -6701,7 +6706,7 @@ msgid "Setup & Design"
 msgstr "Configuration et design"
 
 #: src/components/common/ShareIcon/index.tsx:30
-#: src/components/layouts/EventHomepage/index.tsx:295
+#: src/components/layouts/EventHomepage/index.tsx:293
 #: src/components/layouts/OrganizerLayout/index.tsx:228
 #: src/components/modals/ShareModal/index.tsx:37
 #: src/components/modals/ShareModal/index.tsx:165
@@ -6818,7 +6823,7 @@ msgid "Sold out"
 msgstr "Épuisé"
 
 #: src/components/common/ProductsTable/SortableProduct/index.tsx:81
-#: src/components/layouts/EventHomepage/index.tsx:145
+#: src/components/layouts/EventHomepage/index.tsx:143
 msgid "Sold Out"
 msgstr "Épuisé"
 
@@ -6865,7 +6870,7 @@ msgstr "Désolé, ce code promo n'est pas reconnu"
 
 #: src/components/routes/admin/Attribution/index.tsx:106
 msgid "Source"
-msgstr "Source"
+msgstr ""
 
 #: src/components/common/LanguageSwitcher/index.tsx:20
 msgid "Spanish"
@@ -6916,7 +6921,7 @@ msgstr "Statistiques"
 
 #: src/components/routes/admin/Attribution/index.tsx:35
 msgid "Statistics are based on account creation date"
-msgstr "Les statistiques sont basées sur la date de création du compte"
+msgstr ""
 
 #: src/components/common/AdminEventsTable/index.tsx:107
 #: src/components/common/AdminOrdersTable/index.tsx:82
@@ -6954,7 +6959,7 @@ msgstr "Stripe Connect"
 
 #: src/components/routes/admin/Attribution/index.tsx:128
 msgid "Stripe Connected"
-msgstr "Stripe connecté"
+msgstr ""
 
 #: src/components/routes/product-widget/Payment/PaymentMethods/Stripe/index.tsx:50
 msgid "Stripe payments are not enabled for this event."
@@ -7266,7 +7271,7 @@ msgstr "Modèle supprimé avec succès"
 msgid "Template saved successfully"
 msgstr "Modèle sauvegardé avec succès"
 
-#: src/components/layouts/EventHomepage/index.tsx:605
+#: src/components/layouts/EventHomepage/index.tsx:591
 #: src/components/layouts/OrganizerHomepage/index.tsx:335
 msgid "Terms of Service"
 msgstr "Conditions d'utilisation"
@@ -7476,10 +7481,6 @@ msgstr "Ce code sera utilisé pour suivre les ventes. Seuls les lettres, chiffre
 #: src/components/common/ThemeColorControls/index.tsx:104
 msgid "This color combination may be hard to read for some users"
 msgstr "Cette combinaison de couleurs peut être difficile à lire pour certains utilisateurs"
-
-#: src/components/layouts/EventHomepage/index.tsx:334
-msgid "This event has ended"
-msgstr "Cet événement est terminé"
 
 #: src/components/common/StatusToggle/index.tsx:82
 msgid "This event is not published yet"
@@ -7706,7 +7707,7 @@ msgstr "Billets"
 msgid "Tickets & Products"
 msgstr "Billets et produits"
 
-#: src/components/layouts/EventHomepage/index.tsx:152
+#: src/components/layouts/EventHomepage/index.tsx:150
 msgid "Tickets Available"
 msgstr "Billets disponibles"
 
@@ -7845,7 +7846,7 @@ msgstr "Utilisateurs Totaux"
 
 #: src/components/routes/admin/Attribution/index.tsx:32
 msgid "Track account growth and performance by attribution source"
-msgstr "Suivez la croissance et les performances des comptes par source d'attribution"
+msgstr ""
 
 #: src/components/layouts/AuthLayout/index.tsx:41
 msgid "Track sales, revenue, and attendance with detailed reports"
@@ -7934,7 +7935,7 @@ msgstr "Impossible de mettre à jour la question. Veuillez vérifier vos coordon
 
 #: src/components/routes/admin/Attribution/index.tsx:84
 msgid "Unattributed Accounts"
-msgstr "Comptes non attribués"
+msgstr ""
 
 #: src/components/routes/event/Reports/PromoCodesReport/index.tsx:30
 msgid "Unique Customers"
@@ -8125,10 +8126,6 @@ msgstr "Les utilisateurs peuvent modifier leur adresse e-mail dans <0>Paramètre
 msgid "UTC"
 msgstr "UTC"
 
-#: src/components/layouts/Admin/index.tsx:18
-msgid "UTM Analytics"
-msgstr "Analytique UTM"
-
 #: src/components/routes/admin/Accounts/AccountDetail/index.tsx:206
 msgid "Valid"
 msgstr "Valide"
@@ -8234,7 +8231,7 @@ msgstr "Code de vérification"
 
 #: src/components/routes/admin/Attribution/index.tsx:129
 msgid "Verified"
-msgstr "Vérifié"
+msgstr ""
 
 #: src/components/routes/welcome/index.tsx:187
 msgid "Verify Email"
@@ -8290,11 +8287,16 @@ msgstr "Afficher le message complet"
 msgid "View logs"
 msgstr "Voir les journaux"
 
-#: src/components/layouts/EventHomepage/index.tsx:461
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:95
+msgid "View map"
+msgstr "Voir la carte"
+
+#: src/components/layouts/EventHomepage/index.tsx:447
 msgid "View Map"
 msgstr "Voir la carte"
 
-#: src/components/layouts/EventHomepage/index.tsx:374
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:95
+#: src/components/layouts/EventHomepage/index.tsx:360
 msgid "View on Google Maps"
 msgstr "Afficher sur Google Maps"
 
@@ -8990,3 +8992,57 @@ msgstr "Code Postal"
 #: src/components/routes/product-widget/CollectInformation/index.tsx:523
 msgid "ZIP or Postal Code"
 msgstr "Code postal"
+
+msgid "(empty)"
+msgstr "(vide)"
+
+msgid "Attribution"
+msgstr "Attribution"
+
+msgid "Attribution Analytics"
+msgstr "Analyse d'attribution"
+
+msgid "Attribution Breakdown"
+msgstr "Répartition de l'attribution"
+
+msgid "Attribution Value"
+msgstr "Valeur d'attribution"
+
+msgid "Campaign"
+msgstr "Campagne"
+
+msgid "Medium"
+msgstr "Support"
+
+msgid "No attribution data found"
+msgstr "Aucune donnée d'attribution trouvée"
+
+msgid "Organic Accounts"
+msgstr "Comptes organiques"
+
+msgid "Paid Accounts"
+msgstr "Comptes payants"
+
+msgid "Referral Accounts"
+msgstr "Comptes de parrainage"
+
+msgid "Source"
+msgstr "Source"
+
+msgid "Statistics are based on account creation date"
+msgstr "Les statistiques sont basées sur la date de création du compte"
+
+msgid "Stripe Connected"
+msgstr "Stripe connecté"
+
+msgid "Track account growth and performance by attribution source"
+msgstr "Suivez la croissance et les performances des comptes par source d'attribution"
+
+msgid "Unattributed Accounts"
+msgstr "Comptes non attribués"
+
+msgid "Verified"
+msgstr "Vérifié"
+
+msgid "UTM Analytics"
+msgstr "Analytique UTM"
