--- a/frontend/src/locales/it.po
+++ b/frontend/src/locales/it.po
@@ -29,7 +29,7 @@ msgstr "'Non c'è ancora nulla da mostrare'"
 
 #: src/components/routes/admin/Attribution/index.tsx:148
 msgid "(empty)"
-msgstr "(vuoto)"
+msgstr ""
 
 #: src/components/common/OrganizerReportTable/index.tsx:314
 #: src/components/common/ReportTable/index.tsx:303
@@ -277,7 +277,7 @@ msgstr "Un'imposta standard, come IVA o GST"
 msgid "Abandoned"
 msgstr "Abbandonato"
 
-#: src/components/layouts/EventHomepage/index.tsx:389
+#: src/components/layouts/EventHomepage/index.tsx:375
 msgid "About"
 msgstr "Informazioni"
 
@@ -477,7 +477,7 @@ msgstr "Aggiungi livello"
 
 #: src/components/common/AddEventToCalendarButton/index.tsx:14
 #: src/components/common/AddToCalendarCTA/index.tsx:24
-#: src/components/layouts/EventHomepage/index.tsx:322
+#: src/components/layouts/EventHomepage/index.tsx:320
 msgid "Add to Calendar"
 msgstr "Aggiungi al Calendario"
 
@@ -982,17 +982,21 @@ msgstr "Partecipanti con un biglietto specifico"
 msgid "Attendees:"
 msgstr "Partecipanti:"
 
+#: src/components/layouts/Admin/index.tsx:18
+msgid "Attribution"
+msgstr ""
+
 #: src/components/routes/admin/Attribution/index.tsx:29
 msgid "Attribution Analytics"
-msgstr "Analisi di attribuzione"
+msgstr ""
 
 #: src/components/routes/admin/Attribution/index.tsx:97
 msgid "Attribution Breakdown"
-msgstr "Ripartizione dell'attribuzione"
+msgstr ""
 
 #: src/components/routes/admin/Attribution/index.tsx:124
 msgid "Attribution Value"
-msgstr "Valore di attribuzione"
+msgstr ""
 
 #: src/components/common/WidgetEditor/index.tsx:236
 msgid "Auto Resize"
@@ -1182,7 +1186,7 @@ msgstr "Scanner fotocamera"
 
 #: src/components/routes/admin/Attribution/index.tsx:107
 msgid "Campaign"
-msgstr "Campagna"
+msgstr ""
 
 #: src/components/common/AttendeeTable/index.tsx:370
 #: src/components/common/CheckIn/CheckInOptionsModal.tsx:59
@@ -1788,7 +1792,7 @@ msgstr "Connesso a Stripe"
 msgid "Connection Details"
 msgstr "Dettagli di Connessione"
 
-#: src/components/layouts/EventHomepage/index.tsx:583
+#: src/components/layouts/EventHomepage/index.tsx:569
 #: src/components/layouts/OrganizerHomepage/index.tsx:245
 msgid "Contact"
 msgstr "Contatto"
@@ -3550,7 +3554,7 @@ msgstr "Genera codice"
 msgid "German"
 msgstr "Tedesco"
 
-#: src/components/layouts/EventHomepage/index.tsx:420
+#: src/components/layouts/EventHomepage/index.tsx:406
 msgid "Get Directions"
 msgstr "Indicazioni stradali"
 
@@ -3562,7 +3566,7 @@ msgstr "Ricevi il pagamento immediatamente tramite Stripe Connect"
 msgid "Get started"
 msgstr "Iniziare"
 
-#: src/components/layouts/EventHomepage/index.tsx:619
+#: src/components/layouts/EventHomepage/index.tsx:605
 msgid "Get Tickets"
 msgstr "Ottieni i biglietti"
 
@@ -4069,7 +4073,7 @@ msgstr "John"
 msgid "Johnson"
 msgstr "Johnson"
 
-#: src/components/layouts/EventHomepage/index.tsx:348
+#: src/components/layouts/EventHomepage/index.tsx:334
 msgid "Join from anywhere"
 msgstr "Partecipa da ovunque"
 
@@ -4236,7 +4240,7 @@ msgid "Loading..."
 msgstr "Caricamento..."
 
 #: src/components/common/AttendeeTicket/index.tsx:91
-#: src/components/layouts/EventHomepage/index.tsx:402
+#: src/components/layouts/EventHomepage/index.tsx:388
 #: src/components/routes/event/Settings/index.tsx:42
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:84
 #: src/components/routes/my-tickets/index.tsx:73
@@ -4367,7 +4371,7 @@ msgstr "Massimo Per Ordine"
 
 #: src/components/routes/admin/Attribution/index.tsx:108
 msgid "Medium"
-msgstr "Mezzo"
+msgstr ""
 
 #: src/components/common/AttendeeTable/index.tsx:188
 #: src/components/common/ContactOrganizerModal/index.tsx:88
@@ -4581,7 +4585,7 @@ msgstr "Nessun Partecipante da mostrare"
 
 #: src/components/routes/admin/Attribution/index.tsx:139
 msgid "No attribution data found"
-msgstr "Nessun dato di attribuzione trovato"
+msgstr ""
 
 #: src/components/common/CapacityAssignmentList/index.tsx:42
 msgid "No Capacity Assignments"
@@ -4897,7 +4901,8 @@ msgstr "In Corso"
 msgid "Online"
 msgstr "Online"
 
-#: src/components/layouts/EventHomepage/index.tsx:346
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:71
+#: src/components/layouts/EventHomepage/index.tsx:332
 #: src/components/layouts/OrganizerHomepage/EventCard/index.tsx:167
 msgid "Online Event"
 msgstr "Evento online"
@@ -5161,7 +5166,7 @@ msgstr "Ordini:"
 
 #: src/components/routes/admin/Attribution/index.tsx:62
 msgid "Organic Accounts"
-msgstr "Account organici"
+msgstr ""
 
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:44
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:45
@@ -5185,7 +5190,7 @@ msgstr "Nome Organizzazione"
 
 #: src/components/common/AdminEventsTable/index.tsx:85
 #: src/components/common/AttendeeTicket/index.tsx:82
-#: src/components/layouts/EventHomepage/index.tsx:495
+#: src/components/layouts/EventHomepage/index.tsx:481
 #: src/components/modals/EditUserModal/index.tsx:55
 #: src/components/modals/InviteUserModal/index.tsx:47
 #: src/components/routes/events/Dashboard/index.tsx:193
@@ -5295,7 +5300,7 @@ msgstr "pagato"
 
 #: src/components/routes/admin/Attribution/index.tsx:51
 msgid "Paid Accounts"
-msgstr "Account a pagamento"
+msgstr ""
 
 #: src/components/forms/ProductForm/index.tsx:154
 msgid "Paid Product"
@@ -5758,7 +5763,7 @@ msgstr "Stampa Biglietti"
 msgid "Print to PDF"
 msgstr "Stampa in PDF"
 
-#: src/components/layouts/EventHomepage/index.tsx:599
+#: src/components/layouts/EventHomepage/index.tsx:585
 #: src/components/layouts/OrganizerHomepage/index.tsx:328
 msgid "Privacy Policy"
 msgstr "Informativa sulla privacy"
@@ -6013,7 +6018,7 @@ msgstr "Reindirizzamento a Stripe..."
 
 #: src/components/routes/admin/Attribution/index.tsx:73
 msgid "Referral Accounts"
-msgstr "Account di riferimento"
+msgstr ""
 
 #: src/components/common/EmailTemplateEditor/EmailTemplateEditor.tsx:175
 msgid "Refresh Preview"
@@ -6702,7 +6707,7 @@ msgid "Setup & Design"
 msgstr "Configurazione e design"
 
 #: src/components/common/ShareIcon/index.tsx:30
-#: src/components/layouts/EventHomepage/index.tsx:295
+#: src/components/layouts/EventHomepage/index.tsx:293
 #: src/components/layouts/OrganizerLayout/index.tsx:228
 #: src/components/modals/ShareModal/index.tsx:37
 #: src/components/modals/ShareModal/index.tsx:165
@@ -6819,7 +6824,7 @@ msgid "Sold out"
 msgstr "Esaurito"
 
 #: src/components/common/ProductsTable/SortableProduct/index.tsx:81
-#: src/components/layouts/EventHomepage/index.tsx:145
+#: src/components/layouts/EventHomepage/index.tsx:143
 msgid "Sold Out"
 msgstr "Esaurito"
 
@@ -6866,7 +6871,7 @@ msgstr "Spiacenti, questo codice promo non è riconosciuto"
 
 #: src/components/routes/admin/Attribution/index.tsx:106
 msgid "Source"
-msgstr "Fonte"
+msgstr ""
 
 #: src/components/common/LanguageSwitcher/index.tsx:20
 msgid "Spanish"
@@ -6917,7 +6922,7 @@ msgstr "Statistiche"
 
 #: src/components/routes/admin/Attribution/index.tsx:35
 msgid "Statistics are based on account creation date"
-msgstr "Le statistiche si basano sulla data di creazione dell'account"
+msgstr ""
 
 #: src/components/common/AdminEventsTable/index.tsx:107
 #: src/components/common/AdminOrdersTable/index.tsx:82
@@ -6955,7 +6960,7 @@ msgstr "Stripe Connect"
 
 #: src/components/routes/admin/Attribution/index.tsx:128
 msgid "Stripe Connected"
-msgstr "Stripe connesso"
+msgstr ""
 
 #: src/components/routes/product-widget/Payment/PaymentMethods/Stripe/index.tsx:50
 msgid "Stripe payments are not enabled for this event."
@@ -7267,7 +7272,7 @@ msgstr "Modello eliminato con successo"
 msgid "Template saved successfully"
 msgstr "Modello salvato con successo"
 
-#: src/components/layouts/EventHomepage/index.tsx:605
+#: src/components/layouts/EventHomepage/index.tsx:591
 #: src/components/layouts/OrganizerHomepage/index.tsx:335
 msgid "Terms of Service"
 msgstr "Termini di servizio"
@@ -7477,10 +7482,6 @@ msgstr "Questo codice sarà usato per tracciare le vendite. Sono ammessi solo le
 #: src/components/common/ThemeColorControls/index.tsx:104
 msgid "This color combination may be hard to read for some users"
 msgstr "Questa combinazione di colori potrebbe essere difficile da leggere per alcuni utenti"
-
-#: src/components/layouts/EventHomepage/index.tsx:334
-msgid "This event has ended"
-msgstr "Questo evento è terminato"
 
 #: src/components/common/StatusToggle/index.tsx:82
 msgid "This event is not published yet"
@@ -7707,7 +7708,7 @@ msgstr "Biglietti"
 msgid "Tickets & Products"
 msgstr "Biglietti e prodotti"
 
-#: src/components/layouts/EventHomepage/index.tsx:152
+#: src/components/layouts/EventHomepage/index.tsx:150
 msgid "Tickets Available"
 msgstr "Biglietti disponibili"
 
@@ -7846,7 +7847,7 @@ msgstr "Utenti Totali"
 
 #: src/components/routes/admin/Attribution/index.tsx:32
 msgid "Track account growth and performance by attribution source"
-msgstr "Traccia la crescita e le prestazioni dell'account per fonte di attribuzione"
+msgstr ""
 
 #: src/components/layouts/AuthLayout/index.tsx:41
 msgid "Track sales, revenue, and attendance with detailed reports"
@@ -7935,7 +7936,7 @@ msgstr "Impossibile aggiornare la domanda. Controlla i tuoi dati"
 
 #: src/components/routes/admin/Attribution/index.tsx:84
 msgid "Unattributed Accounts"
-msgstr "Account non attribuiti"
+msgstr ""
 
 #: src/components/routes/event/Reports/PromoCodesReport/index.tsx:30
 msgid "Unique Customers"
@@ -8126,10 +8127,6 @@ msgstr "Gli utenti possono modificare la loro email in <0>Impostazioni Profilo</
 msgid "UTC"
 msgstr "UTC"
 
-#: src/components/layouts/Admin/index.tsx:18
-msgid "UTM Analytics"
-msgstr "Analisi UTM"
-
 #: src/components/routes/admin/Accounts/AccountDetail/index.tsx:206
 msgid "Valid"
 msgstr "Valido"
@@ -8235,7 +8232,7 @@ msgstr "Codice di verifica"
 
 #: src/components/routes/admin/Attribution/index.tsx:129
 msgid "Verified"
-msgstr "Verificato"
+msgstr ""
 
 #: src/components/routes/welcome/index.tsx:187
 msgid "Verify Email"
@@ -8291,11 +8288,16 @@ msgstr "Visualizza messaggio completo"
 msgid "View logs"
 msgstr "Visualizza log"
 
-#: src/components/layouts/EventHomepage/index.tsx:461
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:95
+msgid "View map"
+msgstr "Visualizza mappa"
+
+#: src/components/layouts/EventHomepage/index.tsx:447
 msgid "View Map"
 msgstr "Vedi mappa"
 
-#: src/components/layouts/EventHomepage/index.tsx:374
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:95
+#: src/components/layouts/EventHomepage/index.tsx:360
 msgid "View on Google Maps"
 msgstr "Visualizza su Google Maps"
 
@@ -8991,3 +8993,57 @@ msgstr "CAP o Codice Postale"
 #: src/components/routes/product-widget/CollectInformation/index.tsx:523
 msgid "ZIP or Postal Code"
 msgstr "CAP o Codice Postale"
+
+msgid "(empty)"
+msgstr "(vuoto)"
+
+msgid "Attribution"
+msgstr "Attribuzione"
+
+msgid "Attribution Analytics"
+msgstr "Analisi di attribuzione"
+
+msgid "Attribution Breakdown"
+msgstr "Ripartizione dell'attribuzione"
+
+msgid "Attribution Value"
+msgstr "Valore di attribuzione"
+
+msgid "Campaign"
+msgstr "Campagna"
+
+msgid "Medium"
+msgstr "Mezzo"
+
+msgid "No attribution data found"
+msgstr "Nessun dato di attribuzione trovato"
+
+msgid "Organic Accounts"
+msgstr "Account organici"
+
+msgid "Paid Accounts"
+msgstr "Account a pagamento"
+
+msgid "Referral Accounts"
+msgstr "Account di riferimento"
+
+msgid "Source"
+msgstr "Fonte"
+
+msgid "Statistics are based on account creation date"
+msgstr "Le statistiche si basano sulla data di creazione dell'account"
+
+msgid "Stripe Connected"
+msgstr "Stripe connesso"
+
+msgid "Track account growth and performance by attribution source"
+msgstr "Traccia la crescita e le prestazioni dell'account per fonte di attribuzione"
+
+msgid "Unattributed Accounts"
+msgstr "Account non attribuiti"
+
+msgid "Verified"
+msgstr "Verificato"
+
+msgid "UTM Analytics"
+msgstr "Analisi UTM"
