--- a/frontend/src/locales/nl.po
+++ b/frontend/src/locales/nl.po
@@ -30,7 +30,7 @@ msgstr "'Er is nog niets te laten zien'"
 
 #: src/components/routes/admin/Attribution/index.tsx:148
 msgid "(empty)"
-msgstr "(leeg)"
+msgstr ""
 
 #: src/components/common/OrganizerReportTable/index.tsx:314
 #: src/components/common/ReportTable/index.tsx:303
@@ -278,7 +278,7 @@ msgstr "Een standaardbelasting, zoals BTW of GST"
 msgid "Abandoned"
 msgstr "Verlaten"
 
-#: src/components/layouts/EventHomepage/index.tsx:389
+#: src/components/layouts/EventHomepage/index.tsx:375
 msgid "About"
 msgstr "Over"
 
@@ -478,7 +478,7 @@ msgstr "Niveau toevoegen"
 
 #: src/components/common/AddEventToCalendarButton/index.tsx:14
 #: src/components/common/AddToCalendarCTA/index.tsx:24
-#: src/components/layouts/EventHomepage/index.tsx:322
+#: src/components/layouts/EventHomepage/index.tsx:320
 msgid "Add to Calendar"
 msgstr "Toevoegen aan kalender"
 
@@ -983,17 +983,21 @@ msgstr "Deelnemers met een specifiek ticket"
 msgid "Attendees:"
 msgstr "Deelnemers:"
 
+#: src/components/layouts/Admin/index.tsx:18
+msgid "Attribution"
+msgstr ""
+
 #: src/components/routes/admin/Attribution/index.tsx:29
 msgid "Attribution Analytics"
-msgstr "Attributie-analyse"
+msgstr ""
 
 #: src/components/routes/admin/Attribution/index.tsx:97
 msgid "Attribution Breakdown"
-msgstr "Attributie-uitsplitsing"
+msgstr ""
 
 #: src/components/routes/admin/Attribution/index.tsx:124
 msgid "Attribution Value"
-msgstr "Attributiewaarde"
+msgstr ""
 
 #: src/components/common/WidgetEditor/index.tsx:236
 msgid "Auto Resize"
@@ -1183,7 +1187,7 @@ msgstr "Camerascanner"
 
 #: src/components/routes/admin/Attribution/index.tsx:107
 msgid "Campaign"
-msgstr "Campagne"
+msgstr ""
 
 #: src/components/common/AttendeeTable/index.tsx:370
 #: src/components/common/CheckIn/CheckInOptionsModal.tsx:59
@@ -1789,7 +1793,7 @@ msgstr "Verbonden met Stripe"
 msgid "Connection Details"
 msgstr "Details verbinding"
 
-#: src/components/layouts/EventHomepage/index.tsx:583
+#: src/components/layouts/EventHomepage/index.tsx:569
 #: src/components/layouts/OrganizerHomepage/index.tsx:245
 msgid "Contact"
 msgstr "Contact"
@@ -3551,7 +3555,7 @@ msgstr "Genereer code"
 msgid "German"
 msgstr "Duits"
 
-#: src/components/layouts/EventHomepage/index.tsx:420
+#: src/components/layouts/EventHomepage/index.tsx:406
 msgid "Get Directions"
 msgstr "Routebeschrijving"
 
@@ -3563,7 +3567,7 @@ msgstr "Ontvang onmiddellijk betaling via Stripe Connect"
 msgid "Get started"
 msgstr "Aan de slag"
 
-#: src/components/layouts/EventHomepage/index.tsx:619
+#: src/components/layouts/EventHomepage/index.tsx:605
 msgid "Get Tickets"
 msgstr "Koop Tickets"
 
@@ -4070,7 +4074,7 @@ msgstr "Jan"
 msgid "Johnson"
 msgstr "Jansen"
 
-#: src/components/layouts/EventHomepage/index.tsx:348
+#: src/components/layouts/EventHomepage/index.tsx:334
 msgid "Join from anywhere"
 msgstr "Neem overal vandaan deel"
 
@@ -4237,7 +4241,7 @@ msgid "Loading..."
 msgstr "Aan het laden..."
 
 #: src/components/common/AttendeeTicket/index.tsx:91
-#: src/components/layouts/EventHomepage/index.tsx:402
+#: src/components/layouts/EventHomepage/index.tsx:388
 #: src/components/routes/event/Settings/index.tsx:42
 #: src/components/routes/event/Settings/Sections/LocationSettings/index.tsx:84
 #: src/components/routes/my-tickets/index.tsx:73
@@ -4368,7 +4372,7 @@ msgstr "Maximum per bestelling"
 
 #: src/components/routes/admin/Attribution/index.tsx:108
 msgid "Medium"
-msgstr "Medium"
+msgstr ""
 
 #: src/components/common/AttendeeTable/index.tsx:188
 #: src/components/common/ContactOrganizerModal/index.tsx:88
@@ -4582,7 +4586,7 @@ msgstr "Geen aanwezigen"
 
 #: src/components/routes/admin/Attribution/index.tsx:139
 msgid "No attribution data found"
-msgstr "Geen attributiegegevens gevonden"
+msgstr ""
 
 #: src/components/common/CapacityAssignmentList/index.tsx:42
 msgid "No Capacity Assignments"
@@ -4898,7 +4902,8 @@ msgstr "Doorlopend"
 msgid "Online"
 msgstr "Online"
 
-#: src/components/layouts/EventHomepage/index.tsx:346
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:71
+#: src/components/layouts/EventHomepage/index.tsx:332
 #: src/components/layouts/OrganizerHomepage/EventCard/index.tsx:167
 msgid "Online Event"
 msgstr "Online evenement"
@@ -5162,7 +5167,7 @@ msgstr "Bestellingen:"
 
 #: src/components/routes/admin/Attribution/index.tsx:62
 msgid "Organic Accounts"
-msgstr "Organische accounts"
+msgstr ""
 
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:44
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:45
@@ -5186,7 +5191,7 @@ msgstr "Naam organisatie"
 
 #: src/components/common/AdminEventsTable/index.tsx:85
 #: src/components/common/AttendeeTicket/index.tsx:82
-#: src/components/layouts/EventHomepage/index.tsx:495
+#: src/components/layouts/EventHomepage/index.tsx:481
 #: src/components/modals/EditUserModal/index.tsx:55
 #: src/components/modals/InviteUserModal/index.tsx:47
 #: src/components/routes/events/Dashboard/index.tsx:193
@@ -5296,7 +5301,7 @@ msgstr "betaald"
 
 #: src/components/routes/admin/Attribution/index.tsx:51
 msgid "Paid Accounts"
-msgstr "Betaalde accounts"
+msgstr ""
 
 #: src/components/forms/ProductForm/index.tsx:154
 msgid "Paid Product"
@@ -5759,7 +5764,7 @@ msgstr "Tickets afdrukken"
 msgid "Print to PDF"
 msgstr "Afdrukken naar PDF"
 
-#: src/components/layouts/EventHomepage/index.tsx:599
+#: src/components/layouts/EventHomepage/index.tsx:585
 #: src/components/layouts/OrganizerHomepage/index.tsx:328
 msgid "Privacy Policy"
 msgstr "Privacybeleid"
@@ -6012,7 +6017,7 @@ msgstr "Doorverwijzen naar Stripe..."
 
 #: src/components/routes/admin/Attribution/index.tsx:73
 msgid "Referral Accounts"
-msgstr "Verwijzingsaccounts"
+msgstr ""
 
 #: src/components/common/EmailTemplateEditor/EmailTemplateEditor.tsx:175
 msgid "Refresh Preview"
@@ -6701,7 +6706,7 @@ msgid "Setup & Design"
 msgstr "Instellingen & ontwerp"
 
 #: src/components/common/ShareIcon/index.tsx:30
-#: src/components/layouts/EventHomepage/index.tsx:295
+#: src/components/layouts/EventHomepage/index.tsx:293
 #: src/components/layouts/OrganizerLayout/index.tsx:228
 #: src/components/modals/ShareModal/index.tsx:37
 #: src/components/modals/ShareModal/index.tsx:165
@@ -6818,7 +6823,7 @@ msgid "Sold out"
 msgstr "Uitverkocht"
 
 #: src/components/common/ProductsTable/SortableProduct/index.tsx:81
-#: src/components/layouts/EventHomepage/index.tsx:145
+#: src/components/layouts/EventHomepage/index.tsx:143
 msgid "Sold Out"
 msgstr "Uitverkocht"
 
@@ -6865,7 +6870,7 @@ msgstr "Sorry, deze promotiecode wordt niet herkend"
 
 #: src/components/routes/admin/Attribution/index.tsx:106
 msgid "Source"
-msgstr "Bron"
+msgstr ""
 
 #: src/components/common/LanguageSwitcher/index.tsx:20
 msgid "Spanish"
@@ -6916,7 +6921,7 @@ msgstr "Statistieken"
 
 #: src/components/routes/admin/Attribution/index.tsx:35
 msgid "Statistics are based on account creation date"
-msgstr "Statistieken zijn gebaseerd op de aanmaakdatum van het account"
+msgstr ""
 
 #: src/components/common/AdminEventsTable/index.tsx:107
 #: src/components/common/AdminOrdersTable/index.tsx:82
@@ -6954,7 +6959,7 @@ msgstr "Stripe Connect"
 
 #: src/components/routes/admin/Attribution/index.tsx:128
 msgid "Stripe Connected"
-msgstr "Stripe verbonden"
+msgstr ""
 
 #: src/components/routes/product-widget/Payment/PaymentMethods/Stripe/index.tsx:50
 msgid "Stripe payments are not enabled for this event."
@@ -7266,7 +7271,7 @@ msgstr "Sjabloon succesvol verwijderd"
 msgid "Template saved successfully"
 msgstr "Sjabloon succesvol opgeslagen"
 
-#: src/components/layouts/EventHomepage/index.tsx:605
+#: src/components/layouts/EventHomepage/index.tsx:591
 #: src/components/layouts/OrganizerHomepage/index.tsx:335
 msgid "Terms of Service"
 msgstr "Servicevoorwaarden"
@@ -7476,10 +7481,6 @@ msgstr "Deze code wordt gebruikt om verkopen bij te houden. Alleen letters, cijf
 #: src/components/common/ThemeColorControls/index.tsx:104
 msgid "This color combination may be hard to read for some users"
 msgstr "Deze kleurencombinatie kan moeilijk leesbaar zijn voor sommige gebruikers"
-
-#: src/components/layouts/EventHomepage/index.tsx:334
-msgid "This event has ended"
-msgstr "Dit evenement is afgelopen"
 
 #: src/components/common/StatusToggle/index.tsx:82
 msgid "This event is not published yet"
@@ -7706,7 +7707,7 @@ msgstr "Tickets"
 msgid "Tickets & Products"
 msgstr "Tickets en producten"
 
-#: src/components/layouts/EventHomepage/index.tsx:152
+#: src/components/layouts/EventHomepage/index.tsx:150
 msgid "Tickets Available"
 msgstr "Tickets beschikbaar"
 
@@ -7845,7 +7846,7 @@ msgstr "Totaal Gebruikers"
 
 #: src/components/routes/admin/Attribution/index.tsx:32
 msgid "Track account growth and performance by attribution source"
-msgstr "Volg accountgroei en prestaties per attributiebron"
+msgstr ""
 
 #: src/components/layouts/AuthLayout/index.tsx:41
 msgid "Track sales, revenue, and attendance with detailed reports"
@@ -7934,7 +7935,7 @@ msgstr "Kan vraag niet bijwerken. Controleer uw gegevens"
 
 #: src/components/routes/admin/Attribution/index.tsx:84
 msgid "Unattributed Accounts"
-msgstr "Niet-toegewezen accounts"
+msgstr ""
 
 #: src/components/routes/event/Reports/PromoCodesReport/index.tsx:30
 msgid "Unique Customers"
@@ -8125,10 +8126,6 @@ msgstr "Gebruikers kunnen hun e-mailadres wijzigen in <0>Profielinstellingen</0>
 msgid "UTC"
 msgstr "UTC"
 
-#: src/components/layouts/Admin/index.tsx:18
-msgid "UTM Analytics"
-msgstr "UTM-analyse"
-
 #: src/components/routes/admin/Accounts/AccountDetail/index.tsx:206
 msgid "Valid"
 msgstr "Geldig"
@@ -8234,7 +8231,7 @@ msgstr "Verificatiecode"
 
 #: src/components/routes/admin/Attribution/index.tsx:129
 msgid "Verified"
-msgstr "Geverifieerd"
+msgstr ""
 
 #: src/components/routes/welcome/index.tsx:187
 msgid "Verify Email"
@@ -8290,11 +8287,16 @@ msgstr "Bekijk volledig bericht"
 msgid "View logs"
 msgstr "Logboeken bekijken"
 
-#: src/components/layouts/EventHomepage/index.tsx:461
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:95
+msgid "View map"
+msgstr "Kaart bekijken"
+
+#: src/components/layouts/EventHomepage/index.tsx:447
 msgid "View Map"
 msgstr "Bekijk kaart"
 
-#: src/components/layouts/EventHomepage/index.tsx:374
+#: src/components/layouts/EventHomepage/EventInformation/index.tsx:95
+#: src/components/layouts/EventHomepage/index.tsx:360
 msgid "View on Google Maps"
 msgstr "Bekijk op Google Maps"
 
@@ -8990,3 +8992,57 @@ msgstr "Postcode"
 #: src/components/routes/product-widget/CollectInformation/index.tsx:523
 msgid "ZIP or Postal Code"
 msgstr "Postcode"
+
+msgid "(empty)"
+msgstr "(leeg)"
+
+msgid "Attribution"
+msgstr "Attributie"
+
+msgid "Attribution Analytics"
+msgstr "Attributie-analyse"
+
+msgid "Attribution Breakdown"
+msgstr "Attributie-uitsplitsing"
+
+msgid "Attribution Value"
+msgstr "Attributiewaarde"
+
+msgid "Campaign"
+msgstr "Campagne"
+
+msgid "Medium"
+msgstr "Medium"
+
+msgid "No attribution data found"
+msgstr "Geen attributiegegevens gevonden"
+
+msgid "Organic Accounts"
+msgstr "Organische accounts"
+
+msgid "Paid Accounts"
+msgstr "Betaalde accounts"
+
+msgid "Referral Accounts"
+msgstr "Verwijzingsaccounts"
+
+msgid "Source"
+msgstr "Bron"
+
+msgid "Statistics are based on account creation date"
+msgstr "Statistieken zijn gebaseerd op de aanmaakdatum van het account"
+
+msgid "Stripe Connected"
+msgstr "Stripe verbonden"
+
+msgid "Track account growth and performance by attribution source"
+msgstr "Volg accountgroei en prestaties per attributiebron"
+
+msgid "Unattributed Accounts"
+msgstr "Niet-toegewezen accounts"
+
+msgid "Verified"
+msgstr "Geverifieerd"
+
+msgid "UTM Analytics"
+msgstr "UTM-analyse"
