Feature: Messaging tiers with eligibility checks and admin approval workflow
- Add account_messaging_tiers table with Untrusted/Trusted/Premium tiers
- Implement tier-based limits: messages per 24h, recipients per message, link restrictions
- Add silent eligibility checks (Stripe connected, paid order, event age >= 24h)
- Messages failing eligibility go to PENDING_REVIEW status for admin approval
- Add admin endpoints for approving messages and managing account tiers
- Send email notification to support when message needs review
- Show tier info in SendMessageModal with 429 error handling
- Display/edit messaging tier in admin account details page
- Self-hosted instances default all accounts to Premium tier
- SaaS instances set manually verified accounts to Premium, others to Untrusted

--- a/backend/lang/it.json
+++ b/backend/lang/it.json
@@ -633,5 +633,35 @@
     "Click the button below to view your tickets and order details.": "",
     "View My Tickets": "",
     "This link will expire in 24 hours.": "",
-    "If you did not request this, please ignore this email.": ""
+    "If you did not request this, please ignore this email.": "",
+    "You have reached your daily message limit. Please try again later or contact support to increase your limits.": "",
+    "The number of recipients exceeds your account limit. Please contact support to increase your limits.": "",
+    "Your account tier does not allow links in messages. Please contact support to enable this feature.": "",
+    "Deleted :count failed jobs": "",
+    "Failed job not found": "",
+    "Queued :count jobs for retry": "",
+    "Job queued for retry": "",
+    "Message approved and queued for sending": "",
+    "Promo code not found": "",
+    "Question not found": "",
+    "[Action Required] Message Pending Review - :subject": "",
+    "Message not found": "",
+    "Message must be in pending review status to be approved": "",
+    "The :attribute must be a valid URL.": "",
+    "The :attribute must use http or https protocol.": "",
+    "The :attribute cannot point to localhost or internal addresses.": "",
+    "The :attribute cannot use reserved domain names.": "",
+    "The :attribute cannot point to cloud metadata endpoints.": "",
+    "The :attribute cannot point to private or internal IP addresses.": "",
+    "A message has been flagged for review due to eligibility check failures.": "",
+    "Message Details": "",
+    "Subject": "",
+    "Account": "",
+    "Event": "",
+    "Message ID": "",
+    "Eligibility Failures": "",
+    "Stripe payment account not connected": "",
+    "No completed paid orders on this account": "",
+    "Event was created less than 24 hours ago": "",
+    "Review Message": ""
 }
