Update it.po (#979)

--- a/frontend/src/locales/it.po
+++ b/frontend/src/locales/it.po
@@ -3294,7 +3294,7 @@ msgstr "Esportazione avviata. Preparazione file..."
 
 #: src/components/common/OrganizerReportTable/index.tsx:204
 msgid "Export successful"
-msgstr ""
+msgstr "Esportazione riuscita"
 
 #: src/components/routes/event/Affiliates/index.tsx:42
 msgid "Exporting Affiliates"
@@ -3399,7 +3399,7 @@ msgstr "Impossibile esportare gli ordini"
 
 #: src/components/common/OrganizerReportTable/index.tsx:206
 msgid "Failed to export report. Please try again."
-msgstr ""
+msgstr "Impossibile esportare il report. Riprova."
 
 #: src/components/modals/EditCheckInListModal/index.tsx:79
 msgid "Failed to load Check-In List"
@@ -5110,7 +5110,7 @@ msgstr "Prefisso Numero"
 
 #: src/components/common/OrganizerReportTable/index.tsx:356
 msgid "of"
-msgstr ""
+msgstr "di"
 
 #: src/components/routes/organizer/Settings/Sections/AddressSettings/index.tsx:74
 #: src/components/routes/organizer/Settings/Sections/AddressSettings/index.tsx:75
@@ -5599,7 +5599,7 @@ msgstr "Spaziatura interna"
 
 #: src/components/common/OrganizerReportTable/index.tsx:356
 msgid "Page"
-msgstr ""
+msgstr "Pagina"
 
 #: src/components/forms/StripeCheckoutForm/index.tsx:106
 msgid "Page no longer available"
@@ -7188,7 +7188,7 @@ msgstr "Mostra tasse e commissioni separatamente"
 
 #: src/components/common/OrganizerReportTable/index.tsx:355
 msgid "Showing {0} of {totalRows} records"
-msgstr ""
+msgstr "Visualizzazione di {0} record su {totalRows}"
 
 #: src/components/routes/event/Settings/Sections/HomepageAndCheckoutSettings/index.tsx:100
 msgid "Shown to the customer after they checkout, on the order summary page."
@@ -8039,7 +8039,7 @@ msgstr "Questo prodotto è esaurito"
 
 #: src/components/routes/organizer/Reports/PlatformFeesReport/index.tsx:118
 msgid "This report is for informational purposes only. Always consult with a tax professional before using this data for accounting or tax purposes. Please cross-reference with your Stripe dashboard as Hi.Events may be missing historical data."
-msgstr ""
+msgstr "Questo report ha solo scopo informativo. Consultare sempre un consulente fiscale prima di utilizzare questi dati per scopi contabili o fiscali. Si prega di fare un confronto con la dashboard di Stripe, poiché Hi.Events potrebbe non includere dati storici."
 
 #: src/components/routes/auth/ResetPassword/index.tsx:28
 msgid "This reset password link is invalid or expired."
